kubernetes/ingress.yml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hello-world-app
  annotations:
    kubernetes.io/tls-acme: "true"
spec:
  tls:
  - hosts:
    - hello.k8s-demo.polarsquad.com
    secretName: hello-world-app-tls
  rules:
  - host: hello.k8s-demo.polarsquad.com
    http:
      paths:
      - backend:
          serviceName: hello-world-app
          servicePort: 80
